prevent auto run self-inspection job on others repo

--- a/.github/workflows/self-inspection.yml
+++ b/.github/workflows/self-inspection.yml
@@ -17,6 +17,6 @@ jobs:
 
       - name: run-self-inspection
         uses: ./
-        if: vars.RUN_SELF_INSPECTION  == 'true'
+        if: github.repository == 'al-imam/action-ts-template'
         with:
           milliseconds: 2000
