--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,7 +1,6 @@
 name: enforce-coding-standards-and-guidelines
 
 on:
-  workflow_dispatch:
   pull_request:
   push:
     branches:
@@ -41,6 +40,7 @@ jobs:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: entry/**/*
           TYPESCRIPT_DEFAULT_STYLE: prettier
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JSCPD: false
